--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,1 +1,8 @@
+@import './_reset.scss';
 @import './_variables.scss';
+@import './_header.scss';
+
+html {
+  font-family: 'Khula', sans-serif;
+  font-size: 16px;
+}
