--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @import './_reset.scss';
 @import './_variables.scss';
 @import './_header.scss';
+@import './_main.scss';
 
 html {
   font-family: 'Khula', sans-serif;
