--- a/style.css
+++ b/style.css
@@ -73,6 +73,27 @@ table {
     font-weight: 200;
     letter-spacing: .15em; }
 
+.main {
+  display: flex;
+  justify-content: center;
+  padding-top: 100px;
+  padding-bottom: 100px; }
+
+.project {
+  background-color: salmon;
+  height: 350px;
+  min-width: 300px;
+  max-width: 350px; }
+
+.grid {
+  width: 90%;
+  min-width: 300px;
+  max-width: 1100px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 50px;
+  justify-items: center; }
+
 html {
   font-family: 'Khula', sans-serif;
   font-size: 16px; }
