--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,8 +2,10 @@
 @import './_variables.scss';
 @import './_header.scss';
 @import './_main.scss';
+@import './_footer.scss';
 
 html {
   font-family: 'Khula', sans-serif;
   font-size: 16px;
+  background-color: $dark-primary-color;
 }
