--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -8,7 +8,6 @@
   height: 50vw;
   min-height: 300px;
   max-height: 480px;
-  background-color: #141122;
 
   &__title {
     text-align: center;
@@ -24,7 +23,7 @@
   &__subtitle {
     text-align: center;
     font-size: calc(1.5rem + 1vw);
-    color: $main-font-color;
+    color: $accent-color;
     text-transform: capitalize;
     font-weight: 200;
     letter-spacing: .15em;
