--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,8 +1,6 @@
 .main {
   display: flex;
   justify-content: center;
-  padding-top: 100px;
-  padding-bottom: 100px;
 }
 
 .project {
@@ -23,4 +21,42 @@
   @media screen and (max-width: 699px) {
     width: 70%
   }
+}
+
+%overlay {
+  width: 100%;
+  height: 100%;
+  &:hover {
+    opacity: 0;
+  }
+}
+
+.overlay_green {
+  @extend %overlay;
+  background-color: rgba(30, 138, 26, 0.7);
+}
+
+.overlay_purple {
+  @extend %overlay;
+  background-color: rgba(185, 13, 122, 0.7);
+}
+
+.overlay_cyan {
+  @extend %overlay;
+  background-color: rgba(10,223,198 ,.7);
+}
+
+.overlay_pink {
+  @extend %overlay;
+  background-color: rgba(235, 2, 33, 0.7);
+}
+
+.overlay_blue {
+  @extend %overlay;
+  background-color: rgba(0, 43, 124, 0.7);
+}
+
+.overlay_orange {
+  @extend %overlay;
+  background-color: rgba(240, 112, 8, 0.7);
 }
