--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -4,7 +4,7 @@
   width: 80%;
   min-width: 270px;
   max-width: 900px;
-  border-top: 2px solid $divider-color;
+  border-top: 2px solid $accent-color;
   font-size: 18px;
   display: flex;
   flex-flow: row wrap;
