--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,3 @@
 $main-font-color: #fff;
-$accent-color: #00BCD4;
-$dark-primary-color: #051421;
-$divider-color: #BDBDBD;
+$shade: rgba(0,0,0, .7);
+$accent-color: #4dd0e1;
