--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,13 +1,19 @@
 .header {
   box-sizing: border-box;
   width: 100%;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
-  height: 50vw;
-  min-height: 300px;
-  max-height: 480px;
+  height: 100vh;
+  background: url('https://images.unsplash.com/photo-1444260239795-df1f0772a252?auto=format&fit=crop&w=1350&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D');
+  background-size: cover;
+
+  &__overlay {
+    width: 100%;
+    height: 100%;
+    background-color: $shade;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+  }
 
   &__title {
     text-align: center;
