--- a/style.css
+++ b/style.css
@@ -48,13 +48,17 @@ table {
 .header {
   box-sizing: border-box;
   width: 100%;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
-  height: 50vw;
-  min-height: 300px;
-  max-height: 480px; }
+  height: 100vh;
+  background: url("https://images.unsplash.com/photo-1444260239795-df1f0772a252?auto=format&fit=crop&w=1350&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D");
+  background-size: cover; }
+  .header__overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center; }
   .header__title {
     text-align: center;
     font-size: calc(3rem + 1vw);
@@ -67,7 +71,7 @@ table {
   .header__subtitle {
     text-align: center;
     font-size: calc(1.5rem + 1vw);
-    color: #00BCD4;
+    color: #4dd0e1;
     text-transform: capitalize;
     font-weight: 200;
     letter-spacing: .15em; }
@@ -123,7 +127,7 @@ table {
   width: 80%;
   min-width: 270px;
   max-width: 900px;
-  border-top: 2px solid #BDBDBD;
+  border-top: 2px solid #4dd0e1;
   font-size: 18px;
   display: flex;
   flex-flow: row wrap;
@@ -132,16 +136,15 @@ table {
   .footer__link {
     margin: 0 40px;
     text-align: center;
-    color: #00BCD4;
+    color: #4dd0e1;
     text-transform: uppercase;
     text-decoration: none; }
     .footer__link:visited, .footer__link:hover, .footer__link:active {
       text-decoration: none;
-      color: #00BCD4; }
+      color: #4dd0e1; }
 
 html {
   font-family: 'Khula', sans-serif;
-  font-size: 16px;
-  background-color: #051421; }
+  font-size: 16px; }
 
 /*# sourceMappingURL=style.css.map */
