--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,6 +1,35 @@
 .main {
   display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
   justify-content: center;
+}
+
+.section {
+  width: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+
+  &__title {
+    text-align: center;
+    font-size: calc(1.5rem + 1vw);
+    font-weight: 700;
+    margin-bottom: 80px;
+  }
+
+  &__text {
+    width: 50vw;
+    min-width: 300px;
+    max-width: 500px;
+    text-align: justify;
+    font-size: calc(.75rem + 1vw);
+    line-height: 1.5em;
+  }
+}
+
+.aboutme {
+  margin-top: 200px;
 }
 
 .project {
@@ -9,7 +38,7 @@
   min-width: 300px;
 }
 
-.grid {
+.showcase {
   width: 90%;
   min-width: 300px;
   max-width: 1100px;
@@ -21,42 +50,4 @@
   @media screen and (max-width: 699px) {
     width: 70%
   }
-}
-
-%overlay {
-  width: 100%;
-  height: 100%;
-  &:hover {
-    opacity: 0;
-  }
-}
-
-.overlay_green {
-  @extend %overlay;
-  background-color: rgba(30, 138, 26, 0.7);
-}
-
-.overlay_purple {
-  @extend %overlay;
-  background-color: rgba(185, 13, 122, 0.7);
-}
-
-.overlay_cyan {
-  @extend %overlay;
-  background-color: rgba(10,223,198 ,.7);
-}
-
-.overlay_pink {
-  @extend %overlay;
-  background-color: rgba(235, 2, 33, 0.7);
-}
-
-.overlay_blue {
-  @extend %overlay;
-  background-color: rgba(0, 43, 124, 0.7);
-}
-
-.overlay_orange {
-  @extend %overlay;
-  background-color: rgba(240, 112, 8, 0.7);
 }
