--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,3 +8,11 @@ html {
   font-family: 'Khula', sans-serif;
   font-size: 16px;
 }
+
+.divider {
+  width: 80%;
+  min-width: 270px;
+  max-width: 900px;
+  border-top: 2px solid $accent-color;
+  margin: 200px 0;
+}
