--- a/style.css
+++ b/style.css
@@ -78,14 +78,37 @@ table {
 
 .main {
   display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
   justify-content: center; }
+
+.section {
+  width: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center; }
+  .section__title {
+    text-align: center;
+    font-size: calc(1.5rem + 1vw);
+    font-weight: 700;
+    margin-bottom: 80px; }
+  .section__text {
+    width: 50vw;
+    min-width: 300px;
+    max-width: 500px;
+    text-align: justify;
+    font-size: calc(.75rem + 1vw);
+    line-height: 1.5em; }
+
+.aboutme {
+  margin-top: 200px; }
 
 .project {
   background: url("http://via.placeholder.com/300");
   height: 350px;
   min-width: 300px; }
 
-.grid {
+.showcase {
   width: 90%;
   min-width: 300px;
   max-width: 1100px;
@@ -94,35 +117,11 @@ table {
   grid-gap: 30px;
   justify-items: stretch; }
   @media screen and (max-width: 699px) {
-    .grid {
+    .showcase {
       width: 70%; } }
 
-.overlay_green, .overlay_purple, .overlay_cyan, .overlay_pink, .overlay_blue, .overlay_orange {
-  width: 100%;
-  height: 100%; }
-  .overlay_green:hover, .overlay_purple:hover, .overlay_cyan:hover, .overlay_pink:hover, .overlay_blue:hover, .overlay_orange:hover {
-    opacity: 0; }
-
-.overlay_green {
-  background-color: rgba(30, 138, 26, 0.7); }
-
-.overlay_purple {
-  background-color: rgba(185, 13, 122, 0.7); }
-
-.overlay_cyan {
-  background-color: rgba(10, 223, 198, 0.7); }
-
-.overlay_pink {
-  background-color: rgba(235, 2, 33, 0.7); }
-
-.overlay_blue {
-  background-color: rgba(0, 43, 124, 0.7); }
-
-.overlay_orange {
-  background-color: rgba(240, 112, 8, 0.7); }
-
 .footer {
-  margin: 150px auto;
+  margin: 200px auto;
   padding-top: 20px;
   width: 80%;
   min-width: 270px;
@@ -146,5 +145,12 @@ table {
 html {
   font-family: 'Khula', sans-serif;
   font-size: 16px; }
+
+.divider {
+  width: 80%;
+  min-width: 270px;
+  max-width: 900px;
+  border-top: 2px solid #4dd0e1;
+  margin: 200px 0; }
 
 /*# sourceMappingURL=style.css.map */
