--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -19,12 +19,18 @@
   }
 
   &__text {
+    box-sizing: border-box;
     width: 50vw;
     min-width: 300px;
     max-width: 500px;
     text-align: justify;
-    font-size: calc(.75rem + 1vw);
+    font-size: calc(1rem + 1vw);
     line-height: 1.5em;
+    padding: 0 15px;
+
+    @media screen and (min-width: 1000px) {
+      font-size: 26px;
+    }
   }
 }
 
@@ -36,6 +42,16 @@
   background: url('http://via.placeholder.com/300');
   height: 350px;
   min-width: 300px;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-end;
+
+  &__caption {
+    width: 100%;
+    height: 85px;
+    background-color: $shade;
+    color: $main-font-color;
+  }
 }
 
 .showcase {
