--- a/style.css
+++ b/style.css
@@ -93,12 +93,17 @@ table {
     font-weight: 700;
     margin-bottom: 80px; }
   .section__text {
+    box-sizing: border-box;
     width: 50vw;
     min-width: 300px;
     max-width: 500px;
     text-align: justify;
-    font-size: calc(.75rem + 1vw);
-    line-height: 1.5em; }
+    font-size: calc(1rem + 1vw);
+    line-height: 1.5em;
+    padding: 0 15px; }
+    @media screen and (min-width: 1000px) {
+      .section__text {
+        font-size: 26px; } }
 
 .aboutme {
   margin-top: 200px; }
@@ -106,7 +111,15 @@ table {
 .project {
   background: url("http://via.placeholder.com/300");
   height: 350px;
-  min-width: 300px; }
+  min-width: 300px;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-end; }
+  .project__caption {
+    width: 100%;
+    height: 85px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff; }
 
 .showcase {
   width: 90%;
