--- a/style.css
+++ b/style.css
@@ -148,12 +148,12 @@ table {
   .footer__link {
     margin: 0 40px;
     text-align: center;
-    color: #4dd0e1;
+    color: rgba(0, 0, 0, 0.7);
     text-transform: uppercase;
     text-decoration: none; }
     .footer__link:visited, .footer__link:hover, .footer__link:active {
       text-decoration: none;
-      color: #4dd0e1; }
+      color: rgba(0, 0, 0, 0.7); }
 
 html {
   font-family: 'Khula', sans-serif;
