--- a/style.css
+++ b/style.css
@@ -116,10 +116,36 @@ table {
   flex-flow: column nowrap;
   justify-content: flex-end; }
   .project__caption {
+    box-sizing: border-box;
     width: 100%;
-    height: 85px;
+    height: 45px;
     background-color: rgba(0, 0, 0, 0.7);
-    color: #fff; }
+    color: #fff;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    transition: height .7s; }
+    .project__caption_visible {
+      height: 100%; }
+  .project__title {
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: 700; }
+  .project__description {
+    padding: 0;
+    font-size: 0;
+    visibility: hidden;
+    opacity: 0;
+    height: 0;
+    line-height: 1.5em;
+    transition: height 1s .2s, opacity 1s .2s, padding 1s .2s, font-size 1s .2s; }
+    .project__description_visible {
+      height: auto;
+      visibility: visible;
+      padding: 30px;
+      font-size: 18px;
+      opacity: 1; }
 
 .showcase {
   width: 90%;
