--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -14,13 +14,13 @@
   &__link {
     margin: 0 40px;
     text-align: center;
-    color: $shade;
+    color: #000;
     text-transform: uppercase;
     text-decoration: none;
 
     &:visited, &:hover, &:active {
       text-decoration: none;
-      color: $shade;
+      color: #000;
     }
   }
 }
