--- a/style.css
+++ b/style.css
@@ -146,6 +146,13 @@ table {
       padding: 30px;
       font-size: 18px;
       opacity: 1; }
+  .project__link {
+    text-decoration: inherit;
+    color: inherit;
+    height: 305px;
+    transition: height .7s; }
+    .project__link_hidden {
+      height: 0; }
 
 .showcase {
   width: 90%;
@@ -174,12 +181,12 @@ table {
   .footer__link {
     margin: 0 40px;
     text-align: center;
-    color: rgba(0, 0, 0, 0.7);
+    color: #000;
     text-transform: uppercase;
     text-decoration: none; }
     .footer__link:visited, .footer__link:hover, .footer__link:active {
       text-decoration: none;
-      color: rgba(0, 0, 0, 0.7); }
+      color: #000; }
 
 html {
   font-family: 'Khula', sans-serif;
