--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -100,25 +100,28 @@
   }
 
   &1 {
-    background: url('https://i.imgur.com/9qgdqai.png') no-repeat top;
-    // background-size: cover;
+    background: url('https://i.imgur.com/BWIoibi.png');
+    background-size: cover;
   }
   &2 {
-    background: url('https://i.imgur.com/Rjwo48U.png') no-repeat top;
-    // background-size: cover;
+    background: url('https://i.imgur.com/sQiSIRl.png') center;
+    background-size: cover;
   }
   &3 {
-    background: url('https://i.imgur.com/lAGxGUN.png') no-repeat top;
-    // background-size: cover;
+    background: url('https://i.imgur.com/waUdlgc.png') center;
+    background-size: cover;
   }
   &4 {
-    background: url('https://i.imgur.com/GMvw0Lf.png') no-repeat top;
+    background: url('https://i.imgur.com/bRER9qw.png') center;
+    background-size: cover;
   }
   &5 {
-    background: url('https://i.imgur.com/ktb3A2t.png') no-repeat top;
+    background: url('https://i.imgur.com/Ixi4Bck.png') center;
+    background-size: cover;
   }
   &6 {
-    background: url('https://i.imgur.com/DzUaFxS.png') no-repeat top;
+    background: url('https://i.imgur.com/8RwCLsY.png') center;
+    background-size: cover;
   }
 }
 
