--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,26 +1,19 @@
 .header {
   box-sizing: border-box;
   width: 100%;
-  height: 100vh;
-  background: url('https://images.unsplash.com/photo-1444260239795-df1f0772a252?auto=format&fit=crop&w=1350&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D');
-  background-size: cover;
+  height: 70vh;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
 
-  &__overlay {
-    width: 100%;
-    height: 100%;
-    background-color: $shade;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
-  }
 
   &__title {
     text-align: center;
     font-size: calc(3rem + 1vw);
-    color: $main-font-color;
     text-transform: uppercase;
     font-weight: 900;
+    //color: $main-font-color;
     letter-spacing: .2em;
     margin-bottom: 20px;
     line-height: 1.2em;
