--- a/style.css
+++ b/style.css
@@ -48,21 +48,14 @@ table {
 .header {
   box-sizing: border-box;
   width: 100%;
-  height: 100vh;
-  background: url("https://images.unsplash.com/photo-1444260239795-df1f0772a252?auto=format&fit=crop&w=1350&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D");
-  background-size: cover; }
-  .header__overlay {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center; }
+  height: 70vh;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center; }
   .header__title {
     text-align: center;
     font-size: calc(3rem + 1vw);
-    color: #fff;
     text-transform: uppercase;
     font-weight: 900;
     letter-spacing: .2em;
@@ -154,17 +147,23 @@ table {
     .project__link_hidden {
       height: 0; }
   .project1 {
-    background: url("https://i.imgur.com/9qgdqai.png") no-repeat top; }
+    background: url("https://i.imgur.com/BWIoibi.png");
+    background-size: cover; }
   .project2 {
-    background: url("https://i.imgur.com/Rjwo48U.png") no-repeat top; }
+    background: url("https://i.imgur.com/sQiSIRl.png") center;
+    background-size: cover; }
   .project3 {
-    background: url("https://i.imgur.com/lAGxGUN.png") no-repeat top; }
+    background: url("https://i.imgur.com/waUdlgc.png") center;
+    background-size: cover; }
   .project4 {
-    background: url("https://i.imgur.com/GMvw0Lf.png") no-repeat top; }
+    background: url("https://i.imgur.com/bRER9qw.png") center;
+    background-size: cover; }
   .project5 {
-    background: url("https://i.imgur.com/ktb3A2t.png") no-repeat top; }
+    background: url("https://i.imgur.com/Ixi4Bck.png") center;
+    background-size: cover; }
   .project6 {
-    background: url("https://i.imgur.com/DzUaFxS.png") no-repeat top; }
+    background: url("https://i.imgur.com/8RwCLsY.png") center;
+    background-size: cover; }
 
 .showcase {
   width: 90%;
