--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -13,7 +13,7 @@
     font-size: calc(3rem + 1vw);
     text-transform: uppercase;
     font-weight: 900;
-    //color: $main-font-color;
+    color: $main-font-color;
     letter-spacing: .2em;
     margin-bottom: 20px;
     line-height: 1.2em;
