--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,3 +1,4 @@
-$main-font-color: #fff;
+$main-font-color: #263238;
+$secondary-font-color: #fff;
 $shade: rgba(0,0,0, .7);
-$accent-color: #4dd0e1;
+$accent-color: #0d27ac;
