--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -51,7 +51,7 @@
     width: 100%;
     height: 45px;
     background-color: $shade;
-    color: $main-font-color;
+    color: $secondary-font-color;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;;
@@ -116,7 +116,7 @@
     background-size: cover;
   }
   &5 {
-    background: url('https://i.imgur.com/Ixi4Bck.png') center;
+    background: url('https://i.imgur.com/kzahW9d.png') center;
     background-size: cover;
   }
   &6 {
