--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -4,7 +4,7 @@
   height: 70vh;
   display: flex;
   flex-flow: column nowrap;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 
 
