--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ table {
   height: 70vh;
   display: flex;
   flex-flow: column nowrap;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center; }
   .header__title {
     text-align: center;
@@ -185,7 +185,7 @@ table {
   min-width: 270px;
   max-width: 900px;
   border-top: 2px solid #0d27ac;
-  font-size: 18px;
+  font-size: 16px;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
@@ -209,7 +209,6 @@ html {
   width: 80%;
   min-width: 270px;
   max-width: 900px;
-  border-top: 2px solid #0d27ac;
-  margin: 200px 0; }
+  border-top: 2px solid #0d27ac; }
 
 /*# sourceMappingURL=style.css.map */
