--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   width: 100%;
   height: 70vh;
+  max-height: 675px;
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-evenly;
