--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ table {
   box-sizing: border-box;
   width: 100%;
   height: 70vh;
+  max-height: 675px;
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-evenly;
